# rookery

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.claude/skills/parcel-audit/: SKILL.md
.claude/skills/parcel-generate/: SKILL.md
.claude/skills/parcel-plan/: SKILL.md
.claude/skills/parcel-reader/: SKILL.md
.claude/skills/parcel-roster/: SKILL.md
.claude/skills/wave-triage/: SKILL.md
docs/: DEPLOYMENT.md  QUICKSTART.md
examples/: README.md
examples/01-hello-world/: parcel.md
examples/02-with-deps/: parcel-a.md  parcel-b.md
src/claude_fleet/: __init__.py  doctor.py  init.py  parcel.py  profile_selector.py  worktree.py
src/claude_fleet/adapters/: __init__.py  base.py  exit_code.py  json_result.py  marker_file.py  registry.py
src/claude_fleet/cli/: __init__.py  daemon.py  doctor.py  init.py  land.py  main.py  parcel.py  queue.py  worktree.py
src/claude_fleet/orchestrator/: __init__.py  __main__.py  backend.py  config.py  daemon.py  land_backend.py  land_events.py  orchestrator.py  retire.py  schema.py  scope.py  verdict_parser.py  worker_backend.py
src/claude_fleet/orchestrator/migrations/: 0003_audit_integration.sql
src/claude_fleet/platform/: claude_lb.py  headless_spawn.py  parcel_prompt.py  worktree_dir.py  worktree_id.py
src/rookery/: __init__.py  doctor.py  init.py  parcel.py  profile_selector.py  worktree.py
src/rookery/adapters/: __init__.py  base.py  chain.py  db.py  exit_code.py  json_result.py  marker_file.py  registry.py
src/rookery/cli/: __init__.py  daemon.py  doctor.py  init.py  inspect.py  land.py  main.py  parcel.py  queue.py  worktree.py
src/rookery/orchestrator/: __init__.py  __main__.py  backend.py  config.py  daemon.py  land_backend.py  land_events.py  notifications.py  orchestrator.py  retire.py  schema.py  scope.py  worker_backend.py
src/rookery/orchestrator/migrations/: 0001_initial.sql  0004_auto_land.sql  0005_verdict_adapter.sql  0006_parcel_results.sql
src/rookery/platform/: claude_lb.py  headless_spawn.py  parcel_prompt.py  worktree_dir.py  worktree_id.py
tests/integration/: test_orchestrator_e2e.py
tests/unit/: test_adapters.py  test_cli_logs_diff.py  test_cli_parcel_done.py  test_doctor.py  test_init.py  test_land_retry.py  test_orchestrator_parcel_results.py  test_parcel.py  test_profile_selector.py  test_worktree.py  test_worktree_retire.py  test_worktree_sweep.py
tests/unit/orchestrator/: fakes.py  test_auto_commit.py  test_claim.py  test_cli.py  test_cli_claim.py  test_cli_daemon_status.py  test_cli_watch.py  test_config_worktrees_root.py  test_daemon.py  test_daemon_config.py  test_land_backend.py  test_orchestrator.py  test_orchestrator_audit_states.py  test_orchestrator_land_states.py  test_read_pid.py  test_reclaim.py  test_retire.py  test_schema.py  test_scope.py  test_verdict_parser.py  test_worker_backend.py  test_worktrees_root_threading.py
