[project]
name = "rookery"
version = "0.2.0"
description = "Persistent parcel-dispatch queue + async daemon for unattended parallel `claude -p` sessions in git worktrees."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Mack Nevill" },
]
keywords = ["claude", "agents", "queue", "daemon", "worktrees", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
]

dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "aiofiles>=23.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
lb = [
    # claude-lb integration (post-publish)
]
managed-agents = [
    # Managed Agents backend (post-hackathon)
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.3",
    "mypy>=1.8",
    "types-pyyaml>=6.0",
]

[project.scripts]
rookery = "rookery.cli.main:cli_main"
rookery-daemon = "rookery.orchestrator.__main__:main"

[project.urls]
Homepage = "https://github.com/0xDarkMatter/rookery"
Repository = "https://github.com/0xDarkMatter/rookery"
Issues = "https://github.com/0xDarkMatter/rookery/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rookery"]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["**/migrations/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "PL"]
ignore = [
    "PLR0911",  # too-many-return-statements (codebase choice for state machines)
    "PLR0912",  # too-many-branches (same reason)
    "PLR0913",  # too-many-arguments (Typer signatures are wide by design)
    "PLR0915",  # too-many-statements (orchestrator hot loops)
    "PLR2004",  # magic-value-comparison (test fixtures use literals heavily)
    "PLC0415",  # import-outside-top-level (deliberate lazy-import pattern; many already have noqa)
    "B008",     # function-call-in-default-argument (Typer.Option in function defaults is canonical)
    "N818",     # exception-name-without-error-suffix (some intentional, e.g. ParcelValidation)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: end-to-end orchestrator + worker integration tests (slower)",
]
